[package]
authors = ["Dale Bustad <dale@divmain.com>"]
edition = "2018"
name = "hotkey"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2", features = ["napi4"]}
napi-derive = "2"
tauri-hotkey = "0.1.2"

[target.'cfg(all(unix, not(target_env = "musl"), not(target_arch = "aarch64"), not(target_arch = "arm")))'.dependencies]
jemallocator = {version = "0.3", features = ["disable_initial_exec_tls"]}

[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
